# fe-parser

./: .clang-format  CMakeLists.txt  README.md  example.code  main.cpp  syntax_tree.txt  task.md  test.code
app/: application.cpp  application.h
app/fe/: grammar_factory.cpp  grammar_factory.h  parser_factory.h  tokenizer_factory.cpp  tokenizer_factory.h
app/fe/ast/: ast_builder.cpp  ast_builder.h  expressions_info.cpp  expressions_info.h  fwd.h  module.cpp  module.h  node.h
app/fe/ast/builders/: basic_ast_builder.cpp  basic_ast_builder.h  expression_ast_builder.cpp  expression_ast_builder.h  full_ast_builder.cpp  full_ast_builder.h  statement_ast_builder.cpp  statement_ast_builder.h
app/fe/ast/expressions/: atom_expression.h  binary_expression.cpp  binary_expression.h  call_expression.cpp  call_expression.h  expression.h  number_expression.cpp  number_expression.h  variable_expression.cpp  variable_expression.h
app/fe/ast/statements/: common_import_statement.cpp  common_import_statement.h  define_function_statement.cpp  define_function_statement.h  define_module_statement.cpp  define_module_statement.h  define_variable_statement.cpp  define_variable_statement.h  import_as_statement.cpp  import_as_statement.h  import_list_statement.cpp  import_list_statement.h  import_statement.cpp  import_statement.h  statement.h
app/fe/ast/visitors/: format_visitor.cpp  format_visitor.h  visitor.h
app/fe/factories/: expressions_info_factory.cpp  expressions_info_factory.h  grammar_factory.cpp  grammar_factory.h  parser_factory.cpp  parser_factory.h  tokenizer_factory.cpp  tokenizer_factory.h
app/fe/tokenizer/parsers/: integer_parser.h  name_keyword_parser.h  operator_parser.cpp  operator_parser.h  whitespace_parser.cpp  whitespace_parser.h
app/fe/tokenizer/tokens/: close_bracket_token.h  indent_token.h  integer_token.h  keyword_token.h  name_token.h  new_line_token.h  open_bracket_token.h  operator_token.h
app/fe/tokens_preprocessor/: line_indent.cpp  tokens_preprocessor.cpp  tokens_preprocessor.h
core/algo/: search_set.hpp
core/ast/: ast_node.h  ast_visitor.h
core/ast/expressions/: expression.h
core/ast/statements/: statement.h
core/common/code/: code_stream.cpp  code_stream.h
core/errors/: logic_errors.h
core/fe/: tokenizer_factory.cpp  tokenizer_factory.h
core/parser/: parser.cpp  parser.h
core/parser/grammar/: grammar.cpp  grammar.h
core/parser/grammar/rules/: abstract_rule.h  named_rule.cpp  named_rule.h  optional_rule.cpp  optional_rule.h  repeat_rule.cpp  repeat_rule.h  sequence_rule.cpp  sequence_rule.h  token_type_rule.hpp  token_value_rule.hpp  variant_rule.cpp  variant_rule.h  virtual_rules.cpp  virtual_rules.h
core/parser/grammar/syntax_tree/: named_node.cpp  named_node.h  node.h  optional_node.cpp  optional_node.h  repeat_node.cpp  repeat_node.h  sequence_node.cpp  sequence_node.h  token_node.cpp  token_node.h  variant_node.cpp  variant_node.h
core/tokenizer/: abstract_parser.h  token_types.h  tokenizer.cpp  tokenizer.h  tokenizer_context.h  tokenizer_creator.cpp  tokenizer_creator.h  tokenizer_factory.cpp  tokenizer_factory.h
core/tokenizer/parsers/: abstract_parser.h  empty_parser.cpp  empty_parser.h  integer_parser.cpp  integer_parser.h  name_keyword_parser.cpp  name_keyword_parser.h  name_parser.cpp  name_parser.h  non_empty_parser.cpp  non_empty_parser.h  operator_parser.cpp  operator_parser.h  operator_parser.hpp  sequence_parser.hpp  sequence_parsers.h  space_parser.cpp  space_parser.h  whitespace_parser.h
core/tokenizer/tokens/: abstract_token.h  base_token.h  close_bracket.h  indent_token.h  integer_token.h  keyword_token.h  name_token.h  new_line_token.h  open_bracket.h  open_bracket_token.h  operator_token.h  space_token.h
core/tokens_preprocessor/: line_indent.cpp  line_indent.h  tokens_preprocessor.cpp  tokens_preprocessor.h
tests/: test.cpp
utils/: container_stream.hpp  istream.cpp  istream.h  useful_streams.h  utils.cpp  utils.h
