cmake_minimum_required(VERSION 3.29)
project(fe_parser)

set(CMAKE_CXX_STANDARD 23)

add_executable(fe_parser main.cpp
        app/application.cpp
        app/application.h
        core/tokenizer/tokenizer.cpp
        core/tokenizer/tokenizer.h
        core/tokenizer/tokens/integer_token.h
        core/tokenizer/tokens/operator_token.h
        core/tokenizer/tokens/abstract_token.h
        utils/istream.cpp
        utils/istream.h
        core/tokenizer/parsers/abstract_parser.h
        app/fe/factories/tokenizer_factory.cpp
        app/fe/factories/tokenizer_factory.h
        core/tokenizer/parsers/integer_parser.cpp
        core/tokenizer/parsers/integer_parser.h
        utils/utils.cpp
        utils/utils.h
        utils/format_stream.h
        core/tokenizer/tokens/indent_token.h
        core/tokenizer/parsers/operator_parser.cpp
        core/tokenizer/parsers/operator_parser.h
        core/algo/search_set.hpp
        core/tokenizer/parsers/whitespace_parser.cpp
        core/tokenizer/parsers/name_parser.h
        core/tokenizer/parsers/name_parser.cpp
        core/tokenizer/tokens/name_token.h
        core/tokens_preprocessor/tokens_preprocessor.cpp
        core/tokens_preprocessor/line_indent.h
        utils/container_stream.hpp
        utils/useful_streams.h
        core/tokens_preprocessor/line_indent.cpp
        core/tokenizer/tokens/open_bracket_token.h
        core/tokenizer/tokens/close_bracket_token.h
        core/parser/parser.cpp
        core/parser/parser.h
        core/parser/grammar/grammar.cpp
        core/parser/grammar/grammar.h
        core/parser/grammar/rules/abstract_rule.h
        core/parser/grammar/syntax_tree/node.h
        core/parser/grammar/rules/variant_rule.cpp
        core/parser/grammar/rules/variant_rule.h
        core/parser/grammar/rules/sequence_rule.cpp
        core/parser/grammar/rules/sequence_rule.h
        core/parser/grammar/syntax_tree/variant_node.cpp
        core/parser/grammar/syntax_tree/variant_node.h
        core/parser/grammar/syntax_tree/sequence_node.cpp
        core/parser/grammar/syntax_tree/sequence_node.h
        app/fe/factories/parser_factory.cpp
        app/fe/factories/parser_factory.h
        app/fe/factories/grammar_factory.cpp
        app/fe/factories/grammar_factory.h
        core/parser/grammar/rules/token_type_rule.hpp
        core/parser/grammar/syntax_tree/token_node.h
        core/parser/grammar/syntax_tree/token_node.cpp
        core/parser/grammar/rules/named_rule.cpp
        core/parser/grammar/rules/named_rule.h
        core/parser/grammar/syntax_tree/named_node.cpp
        core/parser/grammar/syntax_tree/named_node.h
        core/parser/grammar/rules/token_value_rule.hpp
        core/parser/grammar/rules/optional_rule.cpp
        core/parser/grammar/rules/optional_rule.h
        core/parser/grammar/syntax_tree/optional_node.cpp
        core/parser/grammar/syntax_tree/optional_node.h
        core/parser/grammar/syntax_tree/repeat_node.cpp
        core/parser/grammar/syntax_tree/repeat_node.h
        core/parser/grammar/rules/repeat_rule.cpp
        core/parser/grammar/rules/repeat_rule.h
        core/parser/grammar/rules/virtual_rules.cpp
        core/parser/grammar/rules/virtual_rules.h
        app/fe/ast/builders/basic_ast_builder.cpp
        app/fe/ast/builders/basic_ast_builder.h
        app/fe/ast/expressions/expression.h
        app/fe/ast/node.h
        app/fe/ast/visitors/visitor.h
        app/fe/ast/statements/statement.h
        app/fe/ast/expressions/number_expression.cpp
        app/fe/ast/expressions/number_expression.h
        app/fe/ast/fwd.h
        app/fe/ast/visitors/format_visitor.cpp
        app/fe/ast/visitors/format_visitor.h
        app/fe/ast/expressions/variable_expression.cpp
        app/fe/ast/expressions/variable_expression.h
        app/fe/ast/expressions/call_expression.cpp
        app/fe/ast/expressions/call_expression.h
        app/fe/ast/expressions/binary_expression.cpp
        app/fe/ast/expressions/binary_expression.h
        app/fe/ast/expressions_info.cpp
        app/fe/ast/expressions_info.h
        app/fe/factories/expressions_info_factory.cpp
        app/fe/factories/expressions_info_factory.h
        app/fe/ast/expressions/atom_expression.h
        app/fe/ast/statements/define_variable_statement.cpp
        app/fe/ast/statements/define_variable_statement.h
        app/fe/ast/builders/expression_ast_builder.cpp
        app/fe/ast/builders/expression_ast_builder.h
        app/fe/ast/builders/full_ast_builder.cpp
        app/fe/ast/builders/full_ast_builder.h
        app/fe/ast/builders/statement_ast_builder.cpp
        app/fe/ast/builders/statement_ast_builder.h
        app/fe/ast/statements/define_function_statement.cpp
        app/fe/ast/statements/define_function_statement.h
        app/fe/ast/statements/import_statement.h
        app/fe/ast/statements/common_import_statement.cpp
        app/fe/ast/statements/common_import_statement.h
        app/fe/ast/statements/import_statement.cpp
)
